[gd_scene load_steps=9 format=2]

[ext_resource path="res://Source/Gameplay/Map/Country/Country.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/Map/Countries/Afghanistan.png" type="Texture2D" id=2]
[ext_resource path="res://Assets/Graphics/Map/Borders/Afghanistan.png" type="Texture2D" id=3]
[ext_resource path="res://Assets/Fonts/no_virus/No Virus.ttf" type="FontFile" id=4]
[ext_resource path="res://Assets/Audio/drop_002.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/drop_003.ogg" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 54.8251, 50.6346 )

[sub_resource type="FontFile" id=2]
size = 72
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="Country" type="Area2D" groups=[
"Country",
]]
scale = Vector2( 0.33, 0.29 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Country" type="Sprite2D" parent="."]
texture = ExtResource( 2 )

[node name="Border" type="Sprite2D" parent="."]
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false

[node name="Shape3D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="BorderRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 0.733333, 0.733333, 0.733333, 1 )
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountryRect" type="ColorRect" parent="."]
visible = false
offset_left = -140.0
offset_top = -140.0
offset_right = 140.0
offset_bottom = 140.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Troops" type="Label" parent="."]
visible = false
offset_left = -20.0
offset_top = -80.0
offset_right = 30.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 50, 50 )
theme_override_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
visible = false
offset_left = -77.5
offset_top = -20.0
offset_right = 87.5
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
custom_minimum_size = Vector2( 50, 50 )
theme_override_fonts/font = SubResource( 2 )
text = "Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SelectedClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
